[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://res/Font/montserrat_78.tres" type="DynamicFont" id=2]
[ext_resource path="res://res/buttons/RapidModeButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://res/buttons/NormalModeButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://res/buttons/ThemeNewsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://res/Font/montserrat_48.tres" type="DynamicFont" id=6]
[ext_resource path="res://res/buttons/StartButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://res/new_game.gd" type="Script" id=9]

[node name="NewGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
margin_left = 1060.0
margin_top = 20.0
margin_right = 1136.0
margin_bottom = 90.0
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
anchor_top = -0.00233582
anchor_bottom = -0.00233582
margin_left = 1140.0
margin_top = 21.6818
margin_right = 1216.0
margin_bottom = 91.6818
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_right = 1040.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )

[node name="Buttons" type="HBoxContainer" parent="Menu"]
margin_top = 24.0
margin_right = 1040.0
margin_bottom = 496.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Modes" type="VBoxContainer" parent="Menu/Buttons"]
margin_right = 510.0
margin_bottom = 472.0
size_flags_horizontal = 3
custom_constants/separation = 90

[node name="Label" type="Label" parent="Menu/Buttons/Modes"]
margin_right = 510.0
margin_bottom = 123.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "MODOS"
align = 1

[node name="RapidMode" type="HBoxContainer" parent="Menu/Buttons/Modes"]
margin_top = 213.0
margin_right = 510.0
margin_bottom = 277.0
custom_constants/separation = 20
alignment = 2

[node name="SelectIcon" type="TextureRect" parent="Menu/Buttons/Modes/RapidMode"]
margin_left = 79.0
margin_right = 143.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 0 )
texture = ExtResource( 1 )

[node name="RapidModeButton" parent="Menu/Buttons/Modes/RapidMode" instance=ExtResource( 3 )]
margin_left = 163.0
margin_right = 510.0
margin_bottom = 64.0
rect_min_size = Vector2( 347, 64 )

[node name="NormalMode" type="HBoxContainer" parent="Menu/Buttons/Modes"]
margin_top = 367.0
margin_right = 510.0
margin_bottom = 427.0
custom_constants/separation = 20
alignment = 2

[node name="SelectIcon" type="TextureRect" parent="Menu/Buttons/Modes/NormalMode"]
visible = false
margin_left = 79.0
margin_right = 143.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 0 )
texture = ExtResource( 1 )

[node name="NormalModeButton" parent="Menu/Buttons/Modes/NormalMode" instance=ExtResource( 4 )]
margin_left = 163.0
margin_right = 510.0
margin_bottom = 60.0
rect_min_size = Vector2( 347, 60 )

[node name="Themes" type="VBoxContainer" parent="Menu/Buttons"]
margin_left = 530.0
margin_right = 1040.0
margin_bottom = 472.0
size_flags_horizontal = 3
custom_constants/separation = 90

[node name="Label" type="Label" parent="Menu/Buttons/Themes"]
margin_right = 510.0
margin_bottom = 123.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "TEMAS"
align = 1

[node name="NewsTheme" type="HBoxContainer" parent="Menu/Buttons/Themes"]
margin_top = 213.0
margin_right = 510.0
margin_bottom = 277.0
custom_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Menu/Buttons/Themes/NewsTheme"]
margin_left = 33.0
margin_right = 97.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="ThemeNewsButton" parent="Menu/Buttons/Themes/NewsTheme" instance=ExtResource( 5 )]
margin_left = 117.0
margin_right = 477.0
margin_bottom = 64.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/Buttons/Themes"]
margin_top = 367.0
margin_right = 510.0
margin_bottom = 427.0
alignment = 1

[node name="Label" type="Label" parent="Menu/Buttons/Themes/HBoxContainer2"]
margin_left = 122.0
margin_right = 388.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "EM BREVE"

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_top = 500.0
margin_right = 1040.0
margin_bottom = 560.0
alignment = 1

[node name="StartButton" parent="Menu/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 310.0
margin_right = 730.0
margin_bottom = 60.0
rect_min_size = Vector2( 420, 60 )
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Menu/Buttons/Modes/RapidMode/RapidModeButton" to="." method="_on_RapidModeButton_pressed"]
[connection signal="pressed" from="Menu/Buttons/Modes/NormalMode/NormalModeButton" to="." method="_on_NormalModeButton_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
